--- a/blog_post/index.html
+++ b/blog_post/index.html
@@ -16,8 +16,7 @@
   <link rel="stylesheet" type="text/css" href="t01-StyleResponsive.css">
 
   <!-- font -->
-<link href="https://fonts.googleapis.com/css?family=Jura:400,700&amp;subset=latin-ext" rel="stylesheet">
-
+  <link href="https://fonts.googleapis.com/css?family=Cinzel:400,700,900" rel="stylesheet">
 
   <!--[if lt IE 9]>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
